--- a/styles.css
+++ b/styles.css
@@ -1,23 +1,30 @@
-
 /* body{
     background-color:rgb(33, 0, 37);
     color: aliceblue;
 } */
 
-.mascara{
+.mascara {
     max-width: 400px !important;
     padding: 15px;
     margin-left: auto;
     margin-right: auto;
 }
 
-.button {
+
+/* .button {
     float: right;
-}
+} */
+
 .input {
     overflow: hidden;
     padding: 0 3px 0 0;
 }
+
 .input input {
     width: 100%
+}
+
+.gap-button {
+    margin-top: 3px;
+    margin-bottom: 3px;
 }
