--- a/retro.css
+++ b/retro.css
@@ -190,8 +190,14 @@ body {
   padding: .25rem;
 }
 
+
 pre {
   background-color: #333;
+}
+
+.highlight {
+  background-color: #333;
+  border-radius: 0px;
 }
 
 blockquote {
