--- a/retro.css
+++ b/retro.css
@@ -192,12 +192,9 @@ body {
 
 
 pre {
-  background-color: #333;
-}
-
-.highlight {
-  background-color: #333;
-  border-radius: 0px;
+  background-color: #333 !important;
+  border-radius: 0px !important;
+  font-size: 100% !important;
 }
 
 blockquote {
