Refatorado codigo do cabeçalho HTML

--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,10 @@
     color: aliceblue;
 } */
 
+.hero-bory-padding-top {
+    padding-top: 15px;
+}
+
 .adjustment-padding-top {
     padding-top: 6px;
 }
